<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/albumback" >

    <RelativeLayout
        android:id="@+id/showallphoto_headview"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/app_main_color"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/showallphoto_back"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#00ffffff"
            android:drawableLeft="@drawable/back"
            android:text="@string/album"
            android:textColor="@drawable/text_color_white_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/showallphoto_headtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="@string/photo"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/showallphoto_cancel"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#00ffffff"
            android:text="@string/camera_cancel"
            android:textColor="@drawable/text_color_white_gray"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/showallphoto_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#eeeeee" >

        <TextView
            android:id="@+id/showallphoto_preview"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/preview" />

        <TextView
            android:id="@+id/showallphoto_ok_button"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/unfinished"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <GridView
        android:id="@+id/showallphoto_myGrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/showallphoto_bottom_layout"
        android:layout_below="@id/showallphoto_headview"
        android:layout_centerInParent="true"
        android:layout_marginTop="2dp"
        android:background="@color/albumback"
        android:horizontalSpacing="10dp"
        android:numColumns="4"
        android:verticalSpacing="10dp" />

    <ProgressBar
        android:id="@+id/showallphoto_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>